<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.10">
  <POU Name="_07_Config_Overflow" Id="{d395f67e-4381-4f65-91b0-c3ef60855071}" SpecialFunc="None">
    <Declaration><![CDATA[PROGRAM _07_Config_Overflow
VAR
v025_Valv :fValve;
v026_intrHT :fValve;
v027_VentHt :fValve;
v028_DrainHT :fValve;
END_VAR]]></Declaration>
    <Implementation>
      <ST><![CDATA[(*------------------------------------------------------------------------------------------------------*)

//v025_Valv
v025_Valv(valv:=mc._07_OVERFLOW.v025_Valv );

//v026_intrHT
v026_intrHT (valv:=mc._07_OVERFLOW.v026_intrHT );

//v027_VentHt
v027_VentHt (valv:=mc._07_OVERFLOW.v027_VentHt );

//v028_DrainHT
v028_DrainHT (valv:=mc._07_OVERFLOW.v028_DrainHT );]]></ST>
    </Implementation>
    <LineIds Name="_07_Config_Overflow">
      <LineId Id="13" Count="0" />
      <LineId Id="38" Count="1" />
      <LineId Id="2" Count="0" />
      <LineId Id="42" Count="0" />
      <LineId Id="41" Count="0" />
      <LineId Id="40" Count="0" />
      <LineId Id="44" Count="1" />
      <LineId Id="43" Count="0" />
      <LineId Id="47" Count="1" />
      <LineId Id="46" Count="0" />
    </LineIds>
  </POU>
</TcPlcObject>